home page divisions

--- a/index.html
+++ b/index.html
@@ -19,5 +19,17 @@
         
     </head>
     <body>
+     <div id="container">
+      <div id="header">
+
+      </div>
+      <div id="content">
+
+      </div>
+      <div id="footer">
+
+      </div>
+      </div>   
+        
     </body>
 </html>
