added text to Login button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           </div>
 
           <div id="loginCont">
-            <div id="smallButton"></div>
+            <div id="smallButton" href="login.html">Login</div>
           </div>
         </div>
         
