added text to header

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html>
@@ -29,13 +30,14 @@
     </head>
     <body>
      <div id="container">
-      <div id="header">
+      <div class="header">
+        <p>Teach Your Students Online Safety in the Classroom</p>
 
       </div>
-      <div id="content">
+      <div class="content">
 
       </div>
-      <div id="footer">
+      <div class="footer">
 
       </div>
       </div>   
