--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 
 <html>
@@ -32,7 +31,7 @@
      <div id="container">
       <div class="header">
         <p>Teach Your Students Online Safety in the Classroom</p>
-
+        <button type="button">View Our Lessons </button>
       </div>
       <div class="content">
 
@@ -44,3 +43,4 @@
         
     </body>
 </html>
+
