Making things more responsive

--- a/index.html
+++ b/index.html
@@ -25,19 +25,23 @@
           <div id="smallButton" href="login.html">Login</div>
         </div>
       </div>
-      
+
      <div id="container">
-      <div class="header">
-        <p>Teach Your Students Online Safety in the Classroom</p>
-        <button type="button">View Our Lessons </button>
+      <div class="section1">
+        <div class="left_half">
+        </div>
+        <div class="right_half">
+          <p>Teach Your Students Online Safety in the Classroom</p>
+          <button type="button">View Our Lessons </button>
+        </div>
       </div>
-      <div class="content">
 
+      <div class="section2">
       </div>
-      <div class="footer">
 
+      <div class="section3">
       </div>
-      </div>   
+    </div>   
         
     </body>
 </html>
