Finished top section

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
      <div id="container">
       <div class="section1">
         <div class="left_half">
+          <img class="headerPic" src="img/filler1.png">
         </div>
         <div class="right_half">
           <p>Teach Your Students Online Safety in the Classroom</p>
