Setup Basic Layout

--- a/index.html
+++ b/index.html
@@ -32,15 +32,21 @@
           <img class="headerPic" src="img/filler1.png">
         </div>
         <div class="right_half">
-          <p>Teach Your Students Online Safety in the Classroom</p>
+          <h1>Teach Your Students Online Safety in the Classroom</h1>
           <button type="button">View Our Lessons </button>
         </div>
       </div>
 
       <div class="section2">
+        <div class="long_lesson"></div>
+        <div class="long_lesson"></div>
       </div>
 
       <div class="section3">
+        <h2>For Parents</h2>
+        <div class="forparents_lessons"></div>
+        <div class="forparents_lessons"></div>
+        <div class="forparents_lessons"></div>
       </div>
     </div>   
         
