Created other pages

--- a/html/about_us.html
+++ b/html/about_us.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <title>TestDrive</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="../style.css">
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600,700|Open+Sans" rel="stylesheet">
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>
@@ -11,13 +11,13 @@
     <body>
     	<div class="topnav">
         <div id="logoCont">
-          <a id="logo" href="#testdrive">TestDrive</a>
+          <a id="logo" href="../index.html">TestDrive</a>
         </div>
           
         <div id="linksCont">
-          <b class="links" href="#lessons"><p>Lessons</p></b>
-          <b class="links" href="#parents"><p>For Parents</p></b>
-          <b class="links" href="#about"><p>About Us</p></b>
+          <a class="links" href="lessons.html"><p>Lessons</p></a>
+          <a class="links" href="for_parents.html"><p>For Parents</p></a>
+          <a class="links" href="about_us.html"><p>About Us</p></a>
         </div>
 
         <div id="loginCont">
