--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </div>
           
         <div id="linksCont">
-          <b class="links" href="#lessons"><p>Lessons</p></b>
-          <b class="links" href="#parents"><p>For Parents</p></b>
-          <b class="links" href="#about"><p>About Us</p></b>
+          <a class="links" href="html/lessons.html"><p>Lessons</p></a>
+          <a class="links" href="html/for_parents.html"><p>For Parents</p></a>
+          <a class="links" href="html/about_us.html"><p>About Us</p></a>
         </div>
 
         <div id="loginCont">
@@ -33,7 +33,7 @@
         </div>
         <div class="right_half">
           <h1>Teach Your Students Online Safety in the Classroom</h1>
-          <button type="button">View Our Lessons </button>
+          <a href="html/lessons.html"><button type="button">View Our Lessons </button></a>
         </div>
       </div>
 
@@ -44,9 +44,9 @@
 
       <div class="section3">
         <h2>For Parents</h2>
-        <div class="forparents_lessons"></div>
-        <div class="forparents_lessons"></div>
-        <div class="forparents_lessons"></div>
+        <a href="html/lessons.html"><div class="forparents_lessons"></div></a>
+        <a href="html/lessons.html"><div class="forparents_lessons"></div></a>
+        <a href="html/lessons.html"><div class="forparents_lessons"></div></a>
       </div>
     </div>   
         
