Setup Lessons and For Parents Page

--- a/html/for_parents.html
+++ b/html/for_parents.html
@@ -24,5 +24,32 @@
           <div id="smallButton" href="login.html">Login</div>
         </div>
       </div>
+
+      <div id="forParents_s1" class="section1">
+        <div class="left_half">
+          <img class="headerPic" src="../img/filler2.png">
+        </div>
+        <div class="right_half">
+          <h1>For Parents</h1>
+          <h4>Teach your kids to be safe online</h4>
+          <a href="lessons.html"><button id="forParents_button" type="button">View Our Lessons </button></a>
+        </div>
+      </div>
+
+      <div class="lessons_container">
+      	<a href="lessonPage.html"><div class="lessonsBox">
+          <div class="Top_PicHalf"></div>
+          <div class-"Bottom_TextHalf"></div>
+        </div></a>
+        <a href="lessonPage.html"><div class="lessonsBox">
+          <div class="Top_PicHalf"></div>
+          <div class-"Bottom_TextHalf"></div>
+        </div></a>
+        <a href="lessonPage.html"><div class="lessonsBox">
+          <div class="Top_PicHalf"></div>
+          <div class-"Bottom_TextHalf"></div>
+        </div></a>
+      </div>
+
     </body>
 </html>
