--- a/html/lessons.html
+++ b/html/lessons.html
@@ -21,8 +21,36 @@
         </div>
 
         <div id="loginCont">
-          <div id="smallButton" href="login.html">Login</div>
+        <div id="smallButton" href="login.html">Login</div>
         </div>
+      </div>
+
+      <div class="lessons_container">
+        <h3>Lessons</h3>
+        <a href="lessonPage.html"><div class="lessonsBox">
+          <div class="Top_PicHalf"></div>
+          <div class-"Bottom_TextHalf"></div>
+        </div></a>
+        <a href="lessonPage.html"><div class="lessonsBox">
+          <div class="Top_PicHalf"></div>
+          <div class-"Bottom_TextHalf"></div>
+        </div></a>
+        <a href="lessonPage.html"><div class="lessonsBox">
+          <div class="Top_PicHalf"></div>
+          <div class-"Bottom_TextHalf"></div>
+        </div></a>
+        <a href="lessonPage.html"><div class="lessonsBox">
+          <div class="Top_PicHalf"></div>
+          <div class-"Bottom_TextHalf"></div>
+        </div></a>
+        <a href="lessonPage.html"><div class="lessonsBox">
+          <div class="Top_PicHalf"></div>
+          <div class-"Bottom_TextHalf"></div>
+        </div></a>
+        <a href="lessonPage.html"><div class="lessonsBox">
+          <div class="Top_PicHalf"></div>
+          <div class-"Bottom_TextHalf"></div>
+        </div></a>
       </div>
     </body>
 </html>
