--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
       </div>
 
      <div id="container">
-      <div class="section1">
+      <div id="homePage_s1" class="section1">
         <div class="left_half">
           <img class="headerPic" src="img/filler1.png">
         </div>
         <div class="right_half">
           <h1>Teach Your Students Online Safety in the Classroom</h1>
-          <a href="html/lessons.html"><button type="button">View Our Lessons </button></a>
+          <a href="html/lessons.html"><button id="homePage_button" type="button">View Our Lessons </button></a>
         </div>
       </div>
 
