Add filler content for home page

--- a/index.html
+++ b/index.html
@@ -38,15 +38,54 @@
       </div>
 
       <div class="section2">
-        <div class="long_lesson"></div>
-        <div class="long_lesson"></div>
+        <div class="long_lesson">
+          <div class="LL_img"></div>
+          <div class="LL_text">
+            <p class="lessonBox_title">Safe Posting and Self Presentation</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+        </div>
+        <div class="long_lesson">
+          <div class="LL_img"></div>
+          <div class="LL_text">
+            <p class="lessonBox_title">Cyberbullying</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+        </div>
       </div>
 
       <div class="section3">
         <h2>For Parents</h2>
-        <a href="html/lessons.html"><div class="forparents_lessons"></div></a>
-        <a href="html/lessons.html"><div class="forparents_lessons"></div></a>
-        <a href="html/lessons.html"><div class="forparents_lessons"></div></a>
+        <a href="html/lessons.html"><div class="forparents_lessons">
+          <div class="Top_PicHalf"></div>
+          <div class="Bottom_TextHalf">
+            <p class="lessonBox_title">Cyberbullying</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
+        </div></a>
+        <a href="html/lessons.html"><div class="forparents_lessons">
+          <div class="Top_PicHalf"></div>
+          <div class="Bottom_TextHalf">
+            <p class="lessonBox_title">Cyberbullying</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
+        </div></a>
+        <a href="html/lessons.html"><div class="forparents_lessons">
+          <div class="Top_PicHalf"></div>
+          <div class="Bottom_TextHalf">
+            <p class="lessonBox_title">Cyberbullying</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
+        </div></a>
       </div>
     </div>   
         
