Added filler content for Lessons & For Parents Pages

--- a/html/lessons.html
+++ b/html/lessons.html
@@ -29,27 +29,51 @@
         <h3>Lessons</h3>
         <a href="lessonPage.html"><div class="lessonsBox">
           <div class="Top_PicHalf"></div>
-          <div class-"Bottom_TextHalf"></div>
+          <div class-"Bottom_TextHalf">
+            <p class="lessonBox_title">Lorem Ipsum</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
         </div></a>
         <a href="lessonPage.html"><div class="lessonsBox">
           <div class="Top_PicHalf"></div>
-          <div class-"Bottom_TextHalf"></div>
+          <div class-"Bottom_TextHalf">
+            <p class="lessonBox_title">Lorem Ipsum</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
         </div></a>
         <a href="lessonPage.html"><div class="lessonsBox">
           <div class="Top_PicHalf"></div>
-          <div class-"Bottom_TextHalf"></div>
+          <div class-"Bottom_TextHalf">
+            <p class="lessonBox_title">Lorem Ipsum</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
         </div></a>
         <a href="lessonPage.html"><div class="lessonsBox">
           <div class="Top_PicHalf"></div>
-          <div class-"Bottom_TextHalf"></div>
+          <div class-"Bottom_TextHalf">
+            <p class="lessonBox_title">Lorem Ipsum</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
         </div></a>
         <a href="lessonPage.html"><div class="lessonsBox">
           <div class="Top_PicHalf"></div>
-          <div class-"Bottom_TextHalf"></div>
+          <div class-"Bottom_TextHalf">
+            <p class="lessonBox_title">Lorem Ipsum</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
         </div></a>
         <a href="lessonPage.html"><div class="lessonsBox">
           <div class="Top_PicHalf"></div>
-          <div class-"Bottom_TextHalf"></div>
+          <div class-"Bottom_TextHalf">
+            <p class="lessonBox_title">Lorem Ipsum</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
         </div></a>
       </div>
     </body>
