--- a/index.html
+++ b/index.html
@@ -62,26 +62,26 @@ laboris nisi ut aliquip ex ea commodo consequat.</p>
 
       <div class="section3">
         <h2>For Parents</h2>
-        <a href="html/lessons.html"><div class="forparents_lessons">
+        <a href="html/lessonPage.html"><div class="forparents_lessons">
           <div class="Top_PicHalf"></div>
           <div class="Bottom_TextHalf">
-            <p class="lessonBox_title">Cyberbullying</p>
+            <p class="lessonBox_title">Lorem Ipsum</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
 eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
         </div></a>
-        <a href="html/lessons.html"><div class="forparents_lessons">
+        <a href="html/lessonPage.html"><div class="forparents_lessons">
           <div class="Top_PicHalf"></div>
           <div class="Bottom_TextHalf">
-            <p class="lessonBox_title">Cyberbullying</p>
+            <p class="lessonBox_title">Lorem Ipsum</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
 eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
         </div></a>
-        <a href="html/lessons.html"><div class="forparents_lessons">
+        <a href="html/lessonPage.html"><div class="forparents_lessons">
           <div class="Top_PicHalf"></div>
           <div class="Bottom_TextHalf">
-            <p class="lessonBox_title">Cyberbullying</p>
+            <p class="lessonBox_title">Lorem Ipsum</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
 eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
