--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
           <div class="LL_img"></div>
           <div class="LL_text">
             <p class="lessonBox_title">Safe Posting and Self Presentation</p>
-            <p>This lesson will help build smart self-presentation and self-disclosure skills. Kids will learn about the different audiences that might see what they post online, and think about the things they share and the way they present themselves to others./p>
+            <p>This lesson will help build smart self-presentation and self-disclosure skills. Kids will learn about the different audiences that might see what they post online, and think about the things they share and the way they present themselves to others</p>
           </div>
         </div>
         <div class="long_lesson">
           <div class="LL_img"></div>
           <div class="LL_text">
             <p class="lessonBox_title">Cyberbullying</p>
-            <p>This lesson will help kids learn to detect signs of cyberbullying, and let them practice reacting appropriately if they do detect it. It builds on work that promotes “upstanding” behavior in cyberbullying situations./p>
+            <p>This lesson will help kids learn to detect signs of cyberbullying, and let them practice reacting appropriately if they do detect it. It builds on work that promotes “upstanding” behavior in cyberbullying situations</p>
           </div>
         </div>
       </div>
