Adding Lesson Page Filler Content

--- a/html/about_us.html
+++ b/html/about_us.html
@@ -21,7 +21,7 @@
         </div>
 
         <div id="loginCont">
-          <div id="smallButton" href="login.html">Login</div>
+          <a href="html/login.html"><div id="smallButton">Login</div></a>
         </div>
       </div>
     </body>
