--- a/html/lessons.html
+++ b/html/lessons.html
@@ -21,7 +21,7 @@
         </div>
 
         <div id="loginCont">
-        <div id="smallButton" href="login.html">Login</div>
+          <a href="html/login.html"><div id="smallButton">Login</div></a>
         </div>
       </div>
 
@@ -29,7 +29,7 @@
         <h3>Lessons</h3>
         <a href="lessonPage.html"><div class="lessonsBox">
           <div class="Top_PicHalf"></div>
-          <div class-"Bottom_TextHalf">
+          <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Lorem Ipsum</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
 eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -37,7 +37,7 @@ eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div></a>
         <a href="lessonPage.html"><div class="lessonsBox">
           <div class="Top_PicHalf"></div>
-          <div class-"Bottom_TextHalf">
+          <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Lorem Ipsum</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
 eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -45,7 +45,7 @@ eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div></a>
         <a href="lessonPage.html"><div class="lessonsBox">
           <div class="Top_PicHalf"></div>
-          <div class-"Bottom_TextHalf">
+          <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Lorem Ipsum</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
 eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -53,7 +53,7 @@ eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div></a>
         <a href="lessonPage.html"><div class="lessonsBox">
           <div class="Top_PicHalf"></div>
-          <div class-"Bottom_TextHalf">
+          <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Lorem Ipsum</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
 eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -61,7 +61,7 @@ eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div></a>
         <a href="lessonPage.html"><div class="lessonsBox">
           <div class="Top_PicHalf"></div>
-          <div class-"Bottom_TextHalf">
+          <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Lorem Ipsum</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
 eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -69,12 +69,13 @@ eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div></a>
         <a href="lessonPage.html"><div class="lessonsBox">
           <div class="Top_PicHalf"></div>
-          <div class-"Bottom_TextHalf">
+          <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Lorem Ipsum</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
 eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
         </div></a>
+
       </div>
     </body>
 </html>
