--- a/html/for_parents.html
+++ b/html/for_parents.html
@@ -21,7 +21,7 @@
         </div>
 
         <div id="loginCont">
-          <div id="smallButton" href="login.html">Login</div>
+          <a href="html/login.html"><div id="smallButton">Login</div></a>
         </div>
       </div>
 
@@ -39,7 +39,7 @@
       <div class="lessons_container">
       	<a href="lessonPage.html"><div class="lessonsBox">
           <div class="Top_PicHalf"></div>
-          <div class-"Bottom_TextHalf">
+          <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Lorem Ipsum</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
 eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -47,7 +47,7 @@ eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div></a>
         <a href="lessonPage.html"><div class="lessonsBox">
           <div class="Top_PicHalf"></div>
-          <div class-"Bottom_TextHalf">
+          <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Lorem Ipsum</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
 eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -55,7 +55,7 @@ eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div></a>
         <a href="lessonPage.html"><div class="lessonsBox">
           <div class="Top_PicHalf"></div>
-          <div class-"Bottom_TextHalf">
+          <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Lorem Ipsum</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
 eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
