--- a/html/lessons.html
+++ b/html/lessons.html
@@ -30,49 +30,43 @@
         <a href="lessonPage.html"><div class="lessonsBox">
           <div class="Top_PicHalf"></div>
           <div class="Bottom_TextHalf">
-            <p class="lessonBox_title">Lorem Ipsum</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p class="lessonBox_title">Getting Started on TestDrive: Usernames, Passwords, and Bios, Oh My!</p>
+            <p>This lesson will help teach kids how to choose smart usernames and passwords when they create accounts on social media sites (and other kinds of websites too). It also serves to get kids oriented on Social Media TestDrive.</p>
           </div>
         </div></a>
         <a href="lessonPage.html"><div class="lessonsBox">
           <div class="Top_PicHalf"></div>
           <div class="Bottom_TextHalf">
-            <p class="lessonBox_title">Lorem Ipsum</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p class="lessonBox_title">Smart Self-Presentation</p>
+            <p> This lesson will help build smart self-presentation and self-disclosure skills. Kids will learn about the different audiences that might see what they post online, and think about the things they share and the way they present themselves to others.</p>
           </div>
         </div></a>
         <a href="lessonPage.html"><div class="lessonsBox">
           <div class="Top_PicHalf"></div>
           <div class="Bottom_TextHalf">
-            <p class="lessonBox_title">Lorem Ipsum</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p class="lessonBox_title">Stopping Cyberbullying</p>
+            <p> This lesson will help kids learn to detect signs of cyberbullying, and let them practice reacting appropriately if they do detect it. It builds on work that promotes “upstanding” behavior in cyberbullying situations.</p>
           </div>
         </div></a>
         <a href="lessonPage.html"><div class="lessonsBox">
           <div class="Top_PicHalf"></div>
           <div class="Bottom_TextHalf">
-            <p class="lessonBox_title">Lorem Ipsum</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p class="lessonBox_title">Information Literacy</p>
+            <p> Evaluating the quality and veracity of facts and detecting fake news are vital skills for today’s youth. This lesson will help teach kids to find and critically assess facts and data they find on social media sites, and to help others do the same. </p>
           </div>
         </div></a>
         <a href="lessonPage.html"><div class="lessonsBox">
           <div class="Top_PicHalf"></div>
           <div class="Bottom_TextHalf">
-            <p class="lessonBox_title">Lorem Ipsum</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p class="lessonBox_title">The Power of Likes</p>
+            <p> Likes are a common way to show appreciation on social media sites. But sometimes people focus more on getting likes than on actually liking others.  This lesson will help kids think critically about what likes are, what it means to “like” something, and how to distinguish between popularity and quality of social media content. </p>
           </div>
         </div></a>
         <a href="lessonPage.html"><div class="lessonsBox">
           <div class="Top_PicHalf"></div>
           <div class="Bottom_TextHalf">
-            <p class="lessonBox_title">Lorem Ipsum</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p class="lessonBox_title">Self Esteem and Self Image</p>
+            <p>Social media sites, especially image-heavy ones, have received a lot of criticism for harming users’ self-esteem. This lesson will encourage critical thinking about how we compare our real selves to others’ carefully curated social media images of themselves. </p>
           </div>
         </div></a>
 
