Fixed lesson boxes on for parents page

--- a/html/for_parents.html
+++ b/html/for_parents.html
@@ -37,7 +37,7 @@
       </div>
 
       <div class="lessons_container">
-      	<a href="lessonPage.html"><div class="lessonsBox">
+        <a href="html/lessonPage.html"><div class="forparents_lessons">
           <div class="Top_PicHalf"></div>
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Lorem Ipsum</p>
@@ -45,7 +45,7 @@
 eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
         </div></a>
-        <a href="lessonPage.html"><div class="lessonsBox">
+        <a href="html/lessonPage.html"><div class="forparents_lessons">
           <div class="Top_PicHalf"></div>
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Lorem Ipsum</p>
@@ -53,7 +53,7 @@ eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
         </div></a>
-        <a href="lessonPage.html"><div class="lessonsBox">
+        <a href="html/lessonPage.html"><div class="forparents_lessons">
           <div class="Top_PicHalf"></div>
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Lorem Ipsum</p>
