Added Content to About Us Page

--- a/html/about_us.html
+++ b/html/about_us.html
@@ -24,5 +24,22 @@
           <a href="html/login.html"><div id="smallButton">Login</div></a>
         </div>
       </div>
+
+      <div class="lessonheader"><h1 class="lessontitle">About Us</h1></div>
+      <div class="lessoncontent">
+        <p>Social media sites are where life happens for many of today's young people, so it's important to teach them to use these sites safely and effectively. However, there aren't currently ways for kids who are too young to have social media accounts of their own to practice these skills in a safe environment.</p>
+        <p>Like a driving simulator for young people learning to drive for the first time, TestDrive is a safe social media simulation that lets young people practice the skills they learn in the classroom. It looks and feels like a real social media site, but instead of being populated by strangers from all over the world, all of the other users are “bots” pre-programmed by the site's creators. Young people can practice interacting with other “users” and their posts without worrying about “stranger danger”. They can also practice setting their privacy settings, making their own posts, and other important social media skills without worrying about the consequences of getting things wrong.</p>
+
+        <p class="lessonsubheader">Who is TestDrive for?</p>
+        <p>Social media sites are where life happens for many of today's young people, so it's important to teach them to use these sites safely and effectively. However, there aren't currently ways for kids who are too young to have social media accounts of their own to practice these skills in a safe environment.</p>
+        <p>Like a driving simulator for young people learning to drive for the first time, TestDrive is a safe social media simulation that lets young people practice the skills they learn in the classroom. It looks and feels like a real social media site, but instead of being populated by strangers from all over the world, all of the other users are “bots” pre-programmed by the site's creators. Young people can practice interacting with other “users” and their posts without worrying about “stranger danger”. They can also practice setting their privacy settings, making their own posts, and other important social media skills without worrying about the consequences of getting things wrong.</p>
+        <p class="lessonsubheader">How does a TestDrive lesson work?</p>
+        <p>Each TestDrive module is designed to teach a specific social media skill: privacy settings, smart self-presentation, stopping cyberbullying, and information literacy, to name a few. Each module starts with a classroom lesson delivered by an educator or facilitator, with lesson content adapted from Common Sense Media, Harvard University's Youth and Media Program, and Fordham University's Privacy Educators Program. After each brief lesson, students participate in an interactive activity on the TestDrive platform that allows them to put the lesson into action. A group discussion and reflection activity wraps up each module.</p>
+        <p class="lessonsubheader">Who created TestDrive?</p>
+        <p>TestDrive is a platform created by researchers in the Cornell University Social Media Lab, in collaboration with the Program for Research in Youth Development and Engagement and New York State 4-H educators.</p>
+        <p class="lessonsubheader">How can I get started with TestDrive?</p>
+        <p>TestDrive is still in beta. To receive access, you will need to contact the program administrator directly using the contact form on the Get Started page.</p>
+      </div>
+
     </body>
 </html>
