added view lessons button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="logoCont">
           <a id="logo" href="#testdrive">TestDrive</a>
         </div>
-          
+
         <div id="linksCont">
           <a class="links" href="html/lessons.html"><p>Lessons</p></a>
           <a class="links" href="html/for_parents.html"><p>For Parents</p></a>
@@ -54,6 +54,7 @@
           </div>
         </div>
       </a>
+      <a class="lesson_button" href="html/lessons.html">View all our lessons >></a>
       </div>
 
       <div class="section3">
@@ -62,7 +63,7 @@
           <div class="Top_PicHalf"></div>
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Lorem Ipsum</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
 eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
         </div></a>
@@ -70,7 +71,7 @@ eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           <div class="Top_PicHalf"></div>
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Lorem Ipsum</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
 eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
         </div></a>
@@ -78,13 +79,12 @@ eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           <div class="Top_PicHalf"></div>
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Lorem Ipsum</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
 eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
         </div></a>
       </div>
-    </div>   
-        
+    </div>
+
     </body>
 </html>
-
