--- a/html/lessons.html
+++ b/html/lessons.html
@@ -35,7 +35,7 @@
           </div>
         </div></a>
         <a href="lessonPage.html"><div class="lessonsBox">
-          <div class="Top_PicHalf"></div>
+          <div class="self_presentation_PicHalf"><img src="img/self-presentation.jpg" alt="Self presentation online"></div>
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Smart Self-Presentation</p>
             <p> This lesson will help build smart self-presentation and self-disclosure skills. Kids will learn about the different audiences that might see what they post online, and think about the things they share and the way they present themselves to others.</p>
