added image like

--- a/html/lessons.html
+++ b/html/lessons.html
@@ -56,7 +56,8 @@
           </div>
         </div></a>
         <a href="lessonPage.html"><div class="lessonsBox">
-          <div class="Top_PicHalf"></div>
+          <div class="Top_PicHalf">
+             <img class="lessonpic" src="img/thumblike.png"> </div>
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">The Power of Likes</p>
             <p> Likes are a common way to show appreciation on social media sites. But sometimes people focus more on getting likes than on actually liking others.  This lesson will help kids think critically about what likes are, what it means to “like” something, and how to distinguish between popularity and quality of social media content. </p>
