information literacy pic

--- a/html/lessons.html
+++ b/html/lessons.html
@@ -49,7 +49,7 @@
           </div>
         </div></a>
         <a href="lessonPage.html"><div class="lessonsBox">
-          <div class="Top_PicHalf"></div>
+          <div class="infolit"> <img src="../img/fakenews.png" alt="Information Literacy" width="100%" height="100%"></div>
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Information Literacy</p>
             <p> Evaluating the quality and veracity of facts and detecting fake news are vital skills for today’s youth. This lesson will help teach kids to find and critically assess facts and data they find on social media sites, and to help others do the same. </p>
