Changed "Log In" button to "Get Started"

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <div id="loginCont">
-          <a href="html/login.html"><div id="smallButton">Login</div></a>
+          <a href="html/gettingstarted.html"><div id="smallButton">Get Started</div></a>
         </div>
       </div>
 
