--- a/html/for_parents.html
+++ b/html/for_parents.html
@@ -21,7 +21,7 @@
         </div>
 
         <div id="loginCont">
-          <a href="html/login.html"><div id="smallButton">Login</div></a>
+          <a href="gettingstarted.html"><div id="smallButton">Get Started</div></a>
         </div>
       </div>
 
