Added "Getting Started" page, commented out upcoming lessons, and commented out "For Parents" lesson block on homepage

--- a/html/for_parents.html
+++ b/html/for_parents.html
@@ -31,6 +31,7 @@
         </div>
         <div class="right_half">
           <h1>The Parents & Guardians Guide to Social Media TestDrive</h1>
+          <h4>What is Social Media TestDrive and how can it help my kids understand social media?</h4>
         </div>
       </div>
 
