--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         </div>
         <div class="right_half">
           <h1>Teach Your Students Online Safety in the Classroom</h1>
+          <h4>Social Media TestDrive allows kids to practice social media skills in a safe, realistic environment.</h4>
           <a href="html/lessons.html"><button id="homePage_button" type="button">View Our Lessons </button></a>
         </div>
       </div>
@@ -57,34 +58,31 @@
       <a class="lesson_button" href="html/lessons.html">View all our lessons >></a>
       </div>
 
-      <div class="section3">
+      <!--<div class="section3">
         <h2>For Parents</h2>
         <a href="html/lessonPage.html"><div class="forparents_lessons">
           <div class="Top_PicHalf"></div>
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Lorem Ipsum</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
         </div></a>
         <a href="html/lessonPage.html"><div class="forparents_lessons">
           <div class="Top_PicHalf"></div>
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Lorem Ipsum</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
         </div></a>
         <a href="html/lessonPage.html"><div class="forparents_lessons">
           <div class="Top_PicHalf"></div>
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Lorem Ipsum</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
         </div></a>
       </div>
-    </div>
+    </div>-->
 
     </body>
 </html>
