--- a/html/lessons.html
+++ b/html/lessons.html
@@ -55,6 +55,7 @@
             <p> Evaluating the quality and veracity of facts and detecting fake news are vital skills for today's youth. This lesson will help teach kids to find and critically assess facts and data they find on social media sites, and to help others do the same. </p>
           </div>
         </div></a>
+        <!--
         <a href="lessonPage.html"><div class="lessonsBox">
           <div class="likepic"><img src="../img/thumblike.png" width="100%" height="100%"></div>
           <div class="Bottom_TextHalf">
@@ -68,7 +69,7 @@
             <p class="lessonBox_title">Self Esteem and Self Image</p>
             <p>Social media sites, especially image-heavy ones, have received a lot of criticism for harming users' self-esteem. This lesson will encourage critical thinking about how we compare our real selves to others' carefully curated social media images of themselves. </p>
           </div>
-        </div></a>
+        </div></a>-->
 
       </div>
     </body>
