Deleted "Getting Started" Page, linked Google Form in "Getting Started" Button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <div id="loginCont">
-          <a href="html/gettingstarted.html"><div id="smallButton">Get Started</div></a>
+          <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeGOnDC_tCMTItJZmKe81w7bEyhyhLAvqbMATr41ITzqnar5g/viewform?embedded=true"><div id="smallButton">Get Started</div></a>
         </div>
       </div>
 
@@ -42,7 +42,7 @@
         <a href="html/lessonPage.html"><div class="long_lesson">
           <div class="LL_img"></div>
           <div class="LL_text">
-            <p class="lessonBox_title">Safe Posting and Self Presentation</p>
+            <p class="lessonBox_title">Smart Self Presentation</p>
             <p>This lesson will help build smart self-presentation and self-disclosure skills. Kids will learn about the different audiences that might see what they post online, and think about the things they share and the way they present themselves to others.</p>
           </div>
         </div>
@@ -50,7 +50,7 @@
         <a href="html/lessonPage.html"><div class="long_lesson">
           <div class="LL_img"></div>
           <div class="LL_text">
-            <p class="lessonBox_title">Cyberbullying</p>
+            <p class="lessonBox_title">Stopping Cyberbullying</p>
             <p>This lesson will help kids learn to detect signs of cyberbullying, and let them practice reacting appropriately if they do detect it. It builds on work that promotes “upstanding” behavior in cyberbullying situations.</p>
           </div>
         </div>
