--- a/html/lessons.html
+++ b/html/lessons.html
@@ -21,7 +21,7 @@
         </div>
 
         <div id="loginCont">
-          <a href="gettingstarted.html"><div id="smallButton">Get Started</div></a>
+          <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeGOnDC_tCMTItJZmKe81w7bEyhyhLAvqbMATr41ITzqnar5g/viewform?embedded=true"><div id="smallButton">Get Started</div></a>
         </div>
       </div>
 
