--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <div class="section2">
         <a href="html/lessonPage.html"><div class="long_lesson">
-          <div class="LL_img"></div>
+          <div id="home_SelfPres" class="LL_img"></div>
           <div class="LL_text">
             <p class="lessonBox_title">Smart Self Presentation</p>
             <p>This lesson will help build smart self-presentation and self-disclosure skills. Kids will learn about the different audiences that might see what they post online, and think about the things they share and the way they present themselves to others.</p>
@@ -48,7 +48,7 @@
         </div>
         </a>
         <a href="html/lessonPage.html"><div class="long_lesson">
-          <div class="LL_img"></div>
+          <div class="LL_img" id="home_CyberBullying"></div>
           <div class="LL_text">
             <p class="lessonBox_title">Stopping Cyberbullying</p>
             <p>This lesson will help kids learn to detect signs of cyberbullying, and let them practice reacting appropriately if they do detect it. It builds on work that promotes “upstanding” behavior in cyberbullying situations.</p>
