Changed Lesson Pictures

--- a/html/lessons.html
+++ b/html/lessons.html
@@ -35,21 +35,21 @@
           </div>
         </div></a>
         <a href="lessonPage.html"><div class="lessonsBox">
-          <div class="self_presentation_PicHalf"><img src="../img/self-presentation.png" alt="Self presentation online" width="100%" height="100%"></div>
+          <div class="Top_PicHalf" id="lesson_SelfPres"></div>
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Smart Self-Presentation</p>
             <p> This lesson will help build smart self-presentation and self-disclosure skills. Kids will learn about the different audiences that might see what they post online, and think about the things they share and the way they present themselves to others.</p>
           </div>
         </div></a>
         <a href="lessonPage.html"><div class="lessonsBox">
-          <div class="Top_PicHalf"></div>
+          <div class="Top_PicHalf" id="lesson_CyberBullying"></div>
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Stopping Cyberbullying</p>
             <p> This lesson will help kids learn to detect signs of cyberbullying, and let them practice reacting appropriately if they do detect it. It builds on work that promotes "upstanding" behavior in cyberbullying situations.</p>
           </div>
         </div></a>
         <a href="lessonPage.html"><div class="lessonsBox">
-          <div class="infolit"> <img src="../img/news.png" alt="Information Literacy" width="100%" height="100%"></div>
+          <div class="Top_PicHalf" id="lesson_Info"></div>
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Information Literacy</p>
             <p> Evaluating the quality and veracity of facts and detecting fake news are vital skills for today's youth. This lesson will help teach kids to find and critically assess facts and data they find on social media sites, and to help others do the same. </p>
