Added Get Started picture

--- a/html/lessons.html
+++ b/html/lessons.html
@@ -28,7 +28,7 @@
       <div class="lessons_container">
         <h3>Lessons</h3>
         <a href="lessonPage.html"><div class="lessonsBox">
-          <div class="Top_PicHalf"></div>
+          <div class="Top_PicHalf" id="lesson_GetStart"></div>
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Getting Started on TestDrive: Usernames, Passwords, and Bios, Oh My!</p>
             <p>This lesson will help teach kids how to choose smart usernames and passwords when they create accounts on social media sites (and other kinds of websites too). It also serves to get kids oriented on Social Media TestDrive.</p>
