--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </div>
         </div>
         </a>
-        <a href="html/lessonPage.html"><div class="long_lesson">
+        <a href="html/lessons/cyberbullying.html"><div class="long_lesson">
           <div class="LL_img" id="home_CyberBullying"></div>
           <div class="LL_text">
             <p class="lessonBox_title">Stopping Cyberbullying</p>
